--- a/render.yaml
+++ b/render.yaml
@@ -9,7 +9,7 @@ services:
       - key: DEBUG
         value: "False"
       - key: ALLOWED_HOSTS
-        value: "telegram-weather-publisher.onrender.com"
+        value: "*"
       - key: TIME_ZONE
         value: "Asia/Almaty"
       - key: LOG_LEVEL
