Deploy: Render single-service mode + PostgreSQL via DATABASE_URL

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ TELEGRAM_BOT_TOKEN=replace-with-telegram-token
 WEATHER_API_BASE_URL=https://api.open-meteo.com/v1/forecast
 DEFAULT_REQUEST_TIMEOUT=15
 SQLITE_PATH=db.sqlite3
+DATABASE_URL=
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=admin123
