--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ TELEGRAM_BOT_TOKEN=replace-with-telegram-token
 WEATHER_API_BASE_URL=https://api.open-meteo.com/v1/forecast
 DEFAULT_REQUEST_TIMEOUT=15
 SCHEDULER_MISFIRE_GRACE_SECONDS=21600
+SCHEDULER_STARTUP_CATCHUP=True
 SQLITE_PATH=db.sqlite3
 DATABASE_URL=
 DJANGO_SUPERUSER_USERNAME=admin
