Weather: improve type diagnostics and visual selection priority

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,7 @@ WEATHER_API_BASE_URL=https://api.open-meteo.com/v1/forecast
 DEFAULT_REQUEST_TIMEOUT=15
 SCHEDULER_MISFIRE_GRACE_SECONDS=21600
 SCHEDULER_STARTUP_CATCHUP=True
+WEATHER_INCLUDE_CODE_IN_CAPTION=False
 SQLITE_PATH=db.sqlite3
 DATABASE_URL=
 DJANGO_SUPERUSER_USERNAME=admin
