--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,11 @@ WEATHER_API_BASE_URL=https://api.open-meteo.com/v1/forecast
 DEFAULT_REQUEST_TIMEOUT=15
 SCHEDULER_MISFIRE_GRACE_SECONDS=21600
 SCHEDULER_STARTUP_CATCHUP=True
+CRON_SECRET_TOKEN=replace-with-long-random-token
 WEATHER_INCLUDE_CODE_IN_CAPTION=False
 SQLITE_PATH=db.sqlite3
 DATABASE_URL=
+ENABLE_INTERNAL_SCHEDULER=True
 DJANGO_SUPERUSER_USERNAME=admin
 DJANGO_SUPERUSER_EMAIL=admin@example.com
 DJANGO_SUPERUSER_PASSWORD=admin123
