CI test mode: run scheduled publish every 5 minutes

--- a/.github/workflows/scheduled_publish.yml
+++ b/.github/workflows/scheduled_publish.yml
@@ -2,10 +2,9 @@ name: Scheduled Publish
 
 on:
   schedule:
-    # Asia/Almaty (UTC+5): 08:00, 14:00, 20:00 local
-    - cron: "0 3 * * *"
-    - cron: "0 9 * * *"
-    - cron: "0 15 * * *"
+    # Test mode: run every 5 minutes
+    - cron: "*/5 * * * *"
+    - cron: "*/5 * * * *" # for testing, every 5 minutes
   workflow_dispatch:
     inputs:
       forecast_type:
@@ -31,10 +30,8 @@ jobs:
               "0 3 * * *") TYPE="today" ;;
               "0 9 * * *") TYPE="tomorrow" ;;
               "0 15 * * *") TYPE="three_days" ;;
-              *)
-                echo "Unexpected cron expression: ${{ github.event.schedule }}"
-                exit 1
-                ;;
+              "*/5 * * * *") TYPE="today" ;;
+              *) TYPE="today" ;;
             esac
           fi
           echo "forecast_type=${TYPE}" >> "$GITHUB_OUTPUT"
