Scheduler test mode: optional every-minute publish with duplicate bypass

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ SCHEDULER_MISFIRE_GRACE_SECONDS=21600
 SCHEDULER_STARTUP_CATCHUP=True
 CRON_SECRET_TOKEN=replace-with-long-random-token
 WEATHER_INCLUDE_CODE_IN_CAPTION=False
+TEST_PUBLISH_EVERY_MINUTE=False
+TEST_PUBLISH_FORECAST_TYPE=today
+ALLOW_DUPLICATE_PUBLICATIONS=False
 SQLITE_PATH=db.sqlite3
 DATABASE_URL=
 ENABLE_INTERNAL_SCHEDULER=True
